2.77.1 Bevel modifier regression #48996
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#48996
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
OS tested:
Ubuntu MATE x64
Windows 7 x64
Hardware tested:
Intel HD 3000
NVIDIA GTX580m
Works in:
2.77a
Broken in:
2.77.1 (
a3ce64b
)Opening attached blend you'll notice a bevel modifier display artefact. Not restricted to Viewport, also renders in Cycles. Slightly changing bevel settings causes artefact to be either concave or convex.
2.77.1 Bevel issue.blend
2.77.1 (

a3ce64b
)2.77a

Could this regression also be causing textured Viewport issue seen in below screen captures?
2.77.1 (

a3ce64b
) Solid Viewport2.77.1 (

a3ce64b
) Textured ViewportCompare 2.77a Textured Viewport

This (shading and jagged edges) happens with complex scenes while switching between solid and textured Viewport. Unable to share blend seen in above screen captures, trying to create a blend that constantly reproduces this 2.77.1 shading issue.
Thanks
Changed status to: 'Open'
Added subscriber: @david_black
Added subscriber: @Sergey
Howard, is it the same roots as other reports assigned to you? Mind having a look anyway? :) Thanks!
This seems to be a new bevel problem. I will try to fix it soon.
In case helpful, after further experimentation, found the 2.77.1 shading & jagged edges issue (second set of screen captures) is unrelated to Bevel modifier, this issue seems connected with textured viewport shading changes made since 2.77a?
This issue only happens while:
Have changes been made since 2.77a to textured viewport drawing routines? Tried skimming cvs archives, but (so far) not found anything.
Still trying to create a blend file that I'm able to share highlighting this issue.
In closing:
Thank you Sergey and Howard for taking time to look at the Bevel bug report.
Unrelated to the strange shading, there is definitely something strange going on with bevel here. Maybe some strange geometry (though I did check for doubles, and there are no doubled vertices at least). I need to find some time to investigate further. Unfortunately, I don't have time right at this instant.
Created a small (file size) video highlighting second issue.
Textured viewport shading issue.mp4
Seems this 2.77.1 textured viewport shading issue should be split into another bug report (except may be rejected without a blend file?).
Thanks Howard,
Did check for abnormal geometry (including doubles) before submitting the bevel issue blend file, but was unable to find any. No problem about time, take as long as you need my friend.
Hope the rest of your day goes well, and is productive.
In case helpful for Howard,
Short video showing how bevel issue is created
Recreatig bevel issue blend.mp4
Textured viewport smooth shading issue now has its own bug report, complete with blend file.
https://developer.blender.org/T49057
This issue was referenced by
9ba7805a3b
Changed status from 'Open' to: 'Resolved'