Fix T48996, bevel bad for certain in-plane edges.